# GOST

./: .gitignore  CudaRuntime1.sln
CudaRuntime1/: CMakeLists.txt  CudaRuntime1.vcxproj  CudaRuntime1.vcxproj.filters  building.sh  checkValidEnc&Dec.cu  err.c  err.h  gParams.cpp  gParams.h  gen_param_LL.pl  getInfoOfDevice.cu  kernel.cu  kuznechik.cu  kuznechik.cuh  kuznechikContext.cpp  magma.cu  magma.cuh  magma.h  magmaClass.cu  magmaClass.cuh  magmaContext.cpp  magmaContext.h  magmaFunctions.cu  magmaFunctions.cuh  magma_context.h  magma_v2.cu  magma_v2.cuh  main.cpp  myProvider.cpp  myProvider.h  num.c  num.h  speedTest  speedTest.cpp  structures.cuh  table.cuh  test.cpp  test_magma.cpp  test_magma.h  validation_check.cu
CudaRuntime1/build_/: CMakeCache.txt  Makefile  cmake_install.cmake
CudaRuntime1/build_/libprov/: Makefile  cmake_install.cmake
CudaRuntime1/ctxFactory/: ctxFactory.h
CudaRuntime1/generateBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  generateFile
CudaRuntime1/generateFile/: generate.cpp  generateFile.cpp  generateFile.h
CudaRuntime1/generateFiles/: generateFile.cpp  generateFile.h
CudaRuntime1/kuznechik/: kuznechik.cu  kuznechik.cuh
CudaRuntime1/kuznechikContext/: kuznechikContext.cpp  kuznechikContext.h
CudaRuntime1/libprov/: CMakeLists.txt
CudaRuntime1/magma/: magma.cu  magma.cuh
CudaRuntime1/magmaContext/: magmaContext.cpp  magmaContext.h
CudaRuntime1/structures/: structures.cuh
CudaRuntime1/testFiles/outputEnc/: test8  test8.txt.enc  test8_.txt.enc
CudaRuntime1/testSpeed/: testSpeed.cpp  testSpeed.h
CudaRuntime1/tests/: tests.cu  tests.cuh
MagmaCPU/: Magma.cpp  Magma.hpp  MagmaCPU.vcxproj  MagmaCPU.vcxproj.filters  Structures.cpp  Structures.hpp  speed-test.cpp  speed-test.m
